--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,13 @@
             <artifactId>jettison</artifactId>
             <version>1.3.8</version>
         </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/com.sun.jersey/jersey-server -->
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-server</artifactId>
+            <version>1.18.5</version>
+        </dependency>
 
     </dependencies>
 
