--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,14 @@
             <artifactId>restfb</artifactId>
             <version>1.31.0</version>
         </dependency>
+        <!-- Hibernate annotation -->
         
+        <!-- https://mvnrepository.com/artifact/org.codehaus.jettison/jettison -->
+        <dependency>
+            <groupId>org.codehaus.jettison</groupId>
+            <artifactId>jettison</artifactId>
+            <version>1.3.8</version>
+        </dependency>
 
     </dependencies>
 
