--- a/pom.xml
+++ b/pom.xml
@@ -2,16 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>proyectox</groupId>
+    <groupId>com.proyectox</groupId>
     <artifactId>proyectox</artifactId>
-    <packaging>war</packaging>
     <version>1.0</version>
+    <packaging>war</packaging>
     <name>proyectox</name>
   
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <resteasy.version>3.0.19.Final</resteasy.version>
+
     </properties>
     
     <dependencies>
@@ -84,62 +86,113 @@
             <artifactId>hibernate-jpa-2.1-api</artifactId>
             <version>1.0.0.Final</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.restfb/restfb -->
-        <dependency>
-            <groupId>com.restfb</groupId>
-            <artifactId>restfb</artifactId>
-            <version>1.31.0</version>
-        </dependency>
-        <!-- Hibernate annotation -->
         
-        <!-- https://mvnrepository.com/artifact/org.codehaus.jettison/jettison -->
-        <dependency>
-            <groupId>org.codehaus.jettison</groupId>
-            <artifactId>jettison</artifactId>
-            <version>1.3.8</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.resteasy</groupId>
-            <artifactId>resteasy-jaxrs</artifactId>
-            <version>3.0.4.Final</version>
-        </dependency>
+       
+        <!-- core library -->
 
-    </dependencies>
+            <dependency>
+                <groupId>org.jboss.resteasy</groupId>
+                <artifactId>resteasy-jaxrs</artifactId>
+                <version>${resteasy.version}</version>
+            </dependency>
 
-    <profiles>
-        <profile>
-            <!-- When built in OpenShift the 'openshift' profile will be used when invoking mvn. -->
-            <!-- Use this profile for any OpenShift specific customization your app will need. -->
-            <!-- By default that is to put the resulting archive into the 'deployments' folder. -->
-            <!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
-            <id>openshift</id>
-            <build>
-                <finalName>proyectox</finalName>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-war-plugin</artifactId>
-                        <version>2.3</version>
-                        <configuration>
-                            <failOnMissingWebXml>false</failOnMissingWebXml>
-                            <outputDirectory>deployments</outputDirectory>
-                            <warName>ROOT</warName>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
-    <repositories>
-        <repository>
-            <id>unknown-jars-temp-repo</id>
-            <name>A temporary repository created by NetBeans for libraries and jars it could not identify. Please replace the dependencies in this repository with correct ones and delete this repository.</name>
-            <url>file:${project.basedir}/lib</url>
-        </repository>
 
-        <repository>
-            <id>JBoss repository</id>
-            <url>https://repository.jboss.org/nexus/content/groups/public-jboss/</url>
-        </repository>
-    </repositories>
+
+            </dependencies>
+
+            <profiles>
+                <profile>
+                    <!-- When built in OpenShift the 'openshift' profile will be used when invoking mvn. -->
+                    <!-- Use this profile for any OpenShift specific customization your app will need. -->
+                    <!-- By default that is to put the resulting archive into the 'deployments' folder. -->
+                    <!-- http://maven.apache.org/guides/mini/guide-building-for-different-environments.html -->
+                    <id>openshift</id>
+                    <build>
+                        <finalName>proyectox</finalName>
+                        <plugins>
+                            <plugin>
+                                <groupId>org.apache.maven.plugins</groupId>
+                                <artifactId>maven-war-plugin</artifactId>
+                                <version>2.3</version>
+                                <configuration>
+                                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                                    <outputDirectory>deployments</outputDirectory>
+                                    <warName>ROOT</warName>
+                                </configuration>
+                            </plugin>
+                        </plugins>
+                    </build>
+                </profile>
+                <profile>
+                    <id>live</id>
+                    <build>
+
+                        <plugins>
+
+                            <plugin>
+                                <groupId>org.apache.maven.plugins</groupId>
+                                <artifactId>maven-surefire-plugin</artifactId>
+                                <executions>
+                                    <execution>
+                                        <phase>integration-test</phase>
+                                        <goals>
+                                            <goal>test</goal>
+                                        </goals>
+                                        <configuration>
+                                            <excludes>
+                                                <exclude>**/*IntegrationTest.java</exclude>
+                                            </excludes>
+                                            <includes>
+                                                <include>**/*LiveTest.java</include>
+                                            </includes>
+                                        </configuration>
+                                    </execution>
+                                </executions>
+                                <configuration>
+                                    <systemPropertyVariables>
+                                        <test.mime>json</test.mime>
+                                    </systemPropertyVariables>
+                                </configuration>
+                            </plugin>
+                            <plugin>
+                                <groupId>org.codehaus.cargo</groupId>
+                                <artifactId>cargo-maven2-plugin</artifactId>
+                                <version>${cargo-maven2-plugin.version}</version>                        
+                                <configuration>
+                                    <wait>false</wait>
+                                </configuration>
+                                <executions>
+                                    <execution>
+                                        <id>start-server</id>
+                                        <phase>pre-integration-test</phase>
+                                        <goals>
+                                            <goal>start</goal>
+                                        </goals>
+                                    </execution>
+                                    <execution>
+                                        <id>stop-server</id>
+                                        <phase>post-integration-test</phase>
+                                        <goals>
+                                            <goal>stop</goal>
+                                        </goals>
+                                    </execution>
+                                </executions>
+                            </plugin>
+                        </plugins>
+                    </build>
+                </profile>
+            </profiles>
+    
+            <repositories>
+                <repository>
+                    <id>unknown-jars-temp-repo</id>
+                    <name>A temporary repository created by NetBeans for libraries and jars it could not identify. Please replace the dependencies in this repository with correct ones and delete this repository.</name>
+                    <url>file:${project.basedir}/lib</url>
+                </repository>
+
+                <repository>
+                    <id>JBoss repository</id>
+                    <url>https://repository.jboss.org/nexus/content/groups/public-jboss/</url>
+                </repository>
+            </repositories>
 </project>
